Fix run-time breakage when encoutering invalid input-data.

PR:		bin/157718


git-svn-id: svn+ssh://svn.freebsd.org/base/head@223939 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f